--- a/templates/index.html
+++ b/templates/index.html
@@ -10,30 +10,30 @@
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../static/style.css" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="../favicon_io/apple-touch-icon.png"
+      href="../static/favicon_io/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="../favicon_io/favicon-32x32.png"
+      href="../static/favicon_io/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../favicon_io/favicon-16x16.png"
+      href="../static/favicon_io/favicon-16x16.png"
     />
-    <link rel="manifest" href="../favicon_io/site.webmanifest" />
+    <link rel="manifest" href="../static/favicon_io/site.webmanifest" />
     <title>Rekruto Web Service</title>
   </head>
   <body>
     <main class="main">
-      <p class="main-text">HELLO WORLD</p>
+      <p class="main-text">Hello {{name}}! {{message}}!</p>
     </main>
     <footer class="footer">
       <a href="https://github.com/Ddedoss" class="hov"
