--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,10 @@
       <p class="main-text">Hello {{name}}! {{message}}!</p>
     </main>
     <footer class="footer">
+      <a href="https://github.com/Ddedoss/rekruto_ws/tree/ver_0.1" class="hov"
+        >project repository</a
+      >
+      <br />
       <a href="https://github.com/Ddedoss" class="hov"
         >backend github profile</a
       >
